--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
+  border: 1px solid black;
+  width: 500px;
+  margin-top: 20px;
+  margin-right: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+}
+
+.win{
+  border: 10px solid green;
+  color: green;
+}
+
+.lose{
+  border: 10px solid red;
+  color: red;
+}
+
+.tie{
+  border: 10px solid black;
+  color: black;
+}
+
+.item-img {
+  width: 400px;
+}
+
+.main {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.main button {
+  margin-top: 10px;
+  width: 120px;
+  height: 35px;
+  margin-right: 10px;
+  font-size: 15px;
+  background-color: rgb(82, 124, 82);
   color: white;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main button:hover {
+  color: rgb(82, 124, 82);
+  background-color: transparent;
 }
